<resources>
    <string name="app_name">AkunTaskukirjat</string>
    <string name="add_word">Lisää sana</string>
    <string name="add_Button">Lisää taskukirja</string>
    <string name="del_all_Button">Poista kaikki</string>
    <string name="del_Button">Poista</string>
    <string name="empty_not_saved">Virheellinen numero tai nimi</string>
    <string name="sortBy">Vaihda järjestystä klikkaamalla nuolia</string>
    <string name="info">Klikkaa kirjan nimeä nähdäksesi lisätietoja</string>
    <string name="back">Takaisin</string>
    <string name="date">Hankinta pvm</string>
    <string name="painos">Painos</string>
    <string name="num">Numero</string>
    <string name="taskukirjan_nimi">Taskukirjan nimi</string>
    <string name="save">Talleta</string>
    <string name="ok">OK</string>
</resources>